--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 crispy-tailwind==1.0.3
 DateTime==5.5
+dj-database-url==2.3.0
 Django==5.1.4
 django-crispy-forms==2.3
 django-environ==0.11.2
@@ -9,9 +10,12 @@ packaging==24.2
 pathlib==1.0.1
 pillow==11.0.0
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 pytz==2024.2
+setuptools==75.8.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+tzdata==2025.1
 whitenoise==6.8.2
 zope.interface==7.2
